@@ -4,34 +4,27 @@ import com.news.newsservice.entity.Category;
 import com.news.newsservice.web.dto.v1.CategoryListResponse;
 import com.news.newsservice.web.dto.v1.CategoryResponse;
 import com.news.newsservice.web.dto.v1.CategoryUpsertRequest;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
-import org.mapstruct.ReportingPolicy;
+import org.mapstruct.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring",
-        unmappedTargetPolicy = ReportingPolicy.IGNORE,
-        uses = {NewsMapper.class})
+@Mapper(componentModel = MappingConstants.ComponentModel.SPRING,
+        unmappedTargetPolicy = ReportingPolicy.IGNORE)
 public interface CategoryMapper {
 
     Category requestToCategory(CategoryUpsertRequest request);
 
-    @Mapping(source = "categoryId", target = "id")
-    Category requestToCategory(Long categoryId,
-                               CategoryUpsertRequest request);
-
     CategoryResponse categoryToResponse(Category category);
 
     default CategoryListResponse categoryListToCategoryListResponse(List<Category> categories) {
-        CategoryListResponse response = new CategoryListResponse();
-
-        response.setCategories(categories
+        return new CategoryListResponse(categories
                 .stream()
                 .map(this::categoryToResponse)
-                .collect(Collectors.toList()));
-
-        return response;
+                .toList());
     }
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "createAt", ignore = true)
+    @Mapping(target = "updateAt", ignore = true)
+    void updateCategory(CategoryUpsertRequest request, @MappingTarget Category category);
 }
